# ModSecurity-apache

./: .apache_http_modsecurity.c.swn  .apache_http_modsecurity.c.swo  .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  Makefile.am  Makefile.in  README.md  apache_http_modsecurity.c  apache_http_modsecurity.h  apache_http_modsecurity.la  apache_http_modsecurity.lo  autogen.sh  config.c  configure.ac  io.c  modsecurity.conf  release.sh  security3.conf
.libs/: apache_http_modsecurity.la  apache_http_modsecurity.lai
docs/: TODO.md
src/: apache_http_modsecurity.c  apache_http_modsecurity.h  apache_http_modsecurity.la  apache_http_modsecurity.lo  mod_security3.c  mod_security3.h  msc_config.c  msc_config.h  msc_filters.c  msc_filters.h  msc_utils.c  msc_utils.h
src/.libs/: apache_http_modsecurity.lai
t/: 00-phases.t  TEST  TEST.PL  find_string_in_file.pl  load-modsec.t  simple-block.t  very-simple-test.t
t/conf/: extra.conf.in
t/htdocs/: index.html
t/htdocs/00-phases/: 00-phases_01.html  00-phases_02.html  00-phases_03.html  00-phases_04.html  00-phases_05.html
t/htdocs/block-evil-3/: asdf.html
t/htdocs/block-evil-4/: evil
tests/: run-regression-tests.pl.in
tests/regression/action/: 00-disruptive-actions.t  10-detectiononly-actions.t
tests/regression/config/: 00-load-modsec.t  10-debug-directives.t  10-misc-directives.t
tests/regression/rule/: 00-basics.t  20-exceptions.t
tests/regression/server_root/conf/: httpd.conf.in
